# haplotype-windows

./: .gitignore  Cargo.toml  README.md  chr_sizes.txt
hw_out/: Pha_snp_type.csv  test_snp_type.csv  test_windows.csv
src/: density.rs  lib.rs  main.rs  var_types.rs  windows.rs
