[package]
name = "haplotype_windows"
version = "0.1.1"
authors = ["Max Brown <mb39@sanger.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# as I don't need CRAM support. Yet...
rust-htslib = { version = "*", default-features = false }
clap = "~2.27.0"